<resources>
    // Main Menu
    <string name="main_menu_profile">Profile</string>
    <string name="main_menu_exit">Exit</string>

    <string name="app_name">WhatsApp</string>
    <string name="email">Digite seu e-mail</string>
    <string name="password">Digite sua senha</string>
    <string name="no_account">Não tem conta?</string>
    <string name="register">Cadastre-se</string>
    <string name="register2">Faça seu cadastro</string>
    <string name="log_in">Logar</string>
    <string name="sing_up_register">Cadastrar</string>
    <string name="sign_up_name">Digite seu nome</string>
    <string name="sign_up_email">Digite seu e-mail</string>
    <string name="sign_up_password">Digite sua senha</string>
    <string name="fill_in_your_name">Fill in your name!</string>
    <string name="fill_in_your_email">Fill in your email!</string>
    <string name="fill_in_your_password">Fill in your password!</string>
    <string name="successful_registration">Successful registration</string>
    <string name="invalid_email_existing_user">E-mail already belongs to another user</string>
    <string name="invalid_weak_password">Weak password, enter a new one with letters, numbers and special characters.</string>

    // SignIn
    <string name="registration_error">Registration error</string>
    <string name="logged_in_successfully">Logged in successfully!</string>
    <string name="validate_error_sign_in_email">Fill in the e-mail!</string>
    <string name="validate_error_sign_in_password">Fill in the password!</string>
    <string name="error_sign_in_email">E-mail not registered</string>
    <string name="error_sign_in_auth_invalid_credentials_exception">E-mail or password is incorrect</string>
    <string name="invalid_email">Invalid e-mail address, please enter another e-mail address</string>
    <!-- TODO: Remove or change this placeholder text -->

    // Profile
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_chats">Chats</string>
    <string name="fragment_contacts">Contacts</string>
    <string name="profile_name">Enter your name</string>
    <string name="button_update_profile">Update</string>
    <string name="edit_profile">Edit profile</string>
</resources>